<resources>
    <string name="app_name">SimpleInstagram</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="Signup">Signup</string>
    <string name="take_picture">Take Picture</string>
    <string name="caption_here">Caption here</string>
    <string name="post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_image">post image</string>
</resources>